<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.Auditor.AddTenant.AddTenantFragment">

    <LinearLayout
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/addTenant">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="20dp"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="bold"
            android:text="New Tenant Information"/>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_height="match_parent"
                android:layout_width="120dp"
                android:textSize="16sp"
                android:gravity="left"
                android:text="Owner Name:" />

            <EditText
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:gravity="right"
                android:autofillHints=""
                android:inputType="text"
                android:maxLines="1"/>
        </LinearLayout>



        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:gravity="left"
                android:text="Company:" />
            <EditText
                android:id="@+id/text3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:gravity="right"
                android:autofillHints=""
                android:inputType="text"
                android:maxLines="1"/>
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:gravity="left"
                android:text="Email Address:" />
            <EditText
                android:id="@+id/text4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:gravity="right"
                android:autofillHints=""
                android:inputType="textEmailAddress"
                android:maxLines="1"/>
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:gravity="left"
                android:text="Location:" />
            <EditText
                android:id="@+id/text5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:gravity="right"
                android:autofillHints=""
                android:inputType="text"
                android:maxLines="1"/>
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:gravity="left"
                android:text="Institution:" />
            <EditText
                android:id="@+id/text6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:gravity="right"
                android:autofillHints=""
                android:inputType="text"
                android:maxLines="1"/>
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:gravity="left"
                android:text="Type:" />
            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:gravity="right"
                android:layout_height="match_parent" />
        </LinearLayout>

        <Button
            android:id="@+id/addTenantConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#ffb684"
            android:layout_gravity="center"
            android:text="Confirm"/>

    </LinearLayout>

</FrameLayout>