<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Containers.TenantFragmentContainer"
    android:id="@+id/fragment_statistics">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <EditText
            android:id="@+id/tenantId_edittext"
            android:layout_gravity="center"
            android:inputType="number"
            android:layout_width="200dp"
            android:backgroundTint="@color/black"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:hint="Tenant ID"/>
        <Button
            android:id="@+id/searchTenantId_button"
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#a4bf"
            android:text="Search"/>
    </LinearLayout>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/stats_tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabSelectedTextColor="@color/black"
        app:tabIndicatorColor="#a4bf"/>

    <androidx.viewpager.widget.ViewPager
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/stats_viewPager"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Statistics Page"/>

</LinearLayout>