<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/chartLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/reports_chart"
                    android:layout_width="600dp"
                    android:layout_height="300dp" />

            </LinearLayout>

        </HorizontalScrollView>

        <Button
            android:id="@+id/exportcases_button"
            android:background="#ffb684"
            android:layout_margin="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Export"
            android:enabled="false"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</ScrollView>


